# Hourglass

./: .gitignore  CMakeLists.txt  README.md  example.cpp  hashutil.cc  hashutil.h  hourglass.cpp  macros.h  permencoding.h  printutil.cc  printutil.h  rank_util.cpp
bench/: CMakeLists.txt  bench_hourglass.cpp  bench_template.hpp  benchmark.md  workload_gen.cpp
bench/scripts/: download_datasets.sh  execute_tests.sh  generate_datasets.sh  graphs.ipynb  test.py
sux/bits/: EliasFano.hpp  Rank.hpp  Rank9.hpp
